# uwm

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: aaa_dp_libero_goal.yaml  template_train_robomimic.yaml
configs/dataset/: libero_goal.yaml  libero_object.yaml  libero_spatial.yaml
configs/model/: dp_multitask.yaml
experiments/dp/: train_robomimic.py
scripts/: launch_droid_finetune.sh
