[build-system]
requires = ["setuptools>=75.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unified_world_model"
version = "0.1.0"
description = "PyTorch implementation of Unified World Models: Coupling Video and Action Diffusion for Pretraining on Large Robotic Datasets"
readme = "README.md"
requires-python = ">=3.10.14"
dynamic = ["dependencies"]

authors = [
  { name = "Chuning Zhu" },
  { name = "Raymond Yu" },
  { name = "Siyuan Feng" },
  { name = "Benjamin Burchfiel" },
  { name = "Paarth Shah" },
  { name = "Abhishek Gupta" }
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Operating System :: OS Independent"
]

[tool.setuptools]
packages = [
  "models", 
  "configs", 
  "datasets", 
  "experiments", 
  "environments"
]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }